Bug 122188 - Disappear table lines of XLS opened with OS dark theme (XLSX OK)
Summary: Disappear table lines of XLS opened with OS dark theme (XLSX OK)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: filter:xls
Depends on:
Blocks: XLS Linux-Dark-Mode Windows-Dark-Mode
  Show dependency treegraph
 
Reported: 2018-12-19 08:15 UTC by Dead Mozay
Modified: 2023-01-31 20:35 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Attachments (152.96 KB, application/zip)
2018-12-19 08:15 UTC, Dead Mozay
Details
border color with dark theme (58.35 KB, image/png)
2018-12-30 08:33 UTC, EGDFree
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dead Mozay 2018-12-19 08:15:47 UTC
Created attachment 147661 [details]
Attachments

When you open an xls document created in MS Office in a system with a dark theme, no lines of tables are displayed; when you switch to a light theme, the lines become visible. Changing the design of the LO itself does not solve the problem. I attach screenshots and sample document.
Comment 1 Roman Kuznetsov 2018-12-21 21:05:54 UTC Comment hidden (obsolete)
Comment 2 Dead Mozay 2018-12-22 03:38:57 UTC
(In reply to Roman Kuznetsov from comment #1)
> don't repro in
> 
> Версия: 6.2.0.1
> ID сборки: 0412ee99e862f384c1106d0841a950c4cfaa9df1
> Потоков ЦП: 4; ОС:Linux 4.13; Отрисовка ИП: по умолчанию; VCL: gtk3; 
> Локаль: ru-RU (ru_RU.UTF-8); UI-Language: ru-RU
> Calc: threaded
> 
> Xubuntu 17.10 with system theme Numix
> 
> Dead Mozay, what OS and what system dark theme do you use?

tested on openSUSE and Fedora, and the theme for example Adwaita-Dark in GNOME, or Breeze-Dark in Plasma5. in general, all the dark themes that I tried lead to this result.
Comment 3 trmdi 2018-12-30 04:34:43 UTC
I can reproduce it on my Tumbleweed KDE with:
- libreoffice-calc-6.1.3
- Breeze-dark gtk theme
Comment 4 EGDFree 2018-12-30 08:33:02 UTC
Created attachment 147895 [details]
border color with dark theme

I reproduce it on openSUSE Tumbleweed with KDE.
LibreOffice version: 6.1.3.2
GTK theme: Breeze dark

In cell settings i see white color for borders if open with dark theme.
Comment 5 virex 2018-12-30 10:01:29 UTC
same problem with tumbleweed and plasma with black theme and black theme in gtk settings.
Comment 6 Xisco Faulí 2019-02-07 17:15:09 UTC Comment hidden (obsolete)
Comment 7 Dead Mozay 2019-02-08 02:51:41 UTC Comment hidden (obsolete)
Comment 8 raal 2019-02-16 16:59:56 UTC
I can confirm with Version: 6.3.0.0.alpha0+
Build ID: c7ad7849d54fd3dad67e7779102f65b8b2f04881
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 

Theme Adwaita-Dark
Comment 9 Dead Mozay 2020-02-06 18:00:14 UTC Comment hidden (obsolete)
Comment 10 QA Administrators 2022-02-06 03:43:48 UTC Comment hidden (noise)
Comment 11 Ezinne 2022-05-26 14:37:00 UTC
Reproducible in:

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: 7ee7e966bd123fc571144b08bc07b1536a2e23e9
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 12 Caolán McNamara 2022-11-08 09:51:17 UTC
This is a similar xls-specific case to bug #151610
Comment 13 Commit Notification 2022-11-08 17:20:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2e97f7596c2d933e87391a5648341f885975c51b

tdf#122188 border colors should be the same regardless of the desktop theme

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2022-11-09 15:30:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/61fb619b43534e47c5d3fbc125257b0e48499213

tdf#122188 border colors should be the same regardless of the desktop theme

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Stéphane Guillou (stragu) 2023-01-31 16:36:23 UTC
Reproduced on Ubuntu 20.04 with GNOME 3.36.8 (dark theme) with:

Version: 7.3.7.2 / LibreOffice Community
Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

But verified as fixed with:

Version: 7.4.5.1 / LibreOffice Community
Build ID: 9c0871452b3918c1019dde9bfac75448afc4b57f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Caolán, are you OK to mark this one as resolved or was there something missing?
Comment 16 Caolán McNamara 2023-01-31 20:01:11 UTC
no, I think I just forget about this one
Comment 17 Stéphane Guillou (stragu) 2023-01-31 20:35:12 UTC
Thanks! Marked as verified.