tdf#122188 border colors should be the same regardless of the desktop theme

Change-Id: Ifc0297135981b315ce8646e0ca2fe8a899d49f32
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142423
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 2e97f7596c2d933e87391a5648341f885975c51b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142481